change connection string

--- a/CoralBleachingExtrapolation/appsettings.json
+++ b/CoralBleachingExtrapolation/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=LAPTOP-DA08ERN6;Database=DB_CoralBleachingExtrapolation;Trusted_Connection=Yes;TrustServerCertificate=True"
-    "DefaultConnection": "ADD_YOUR_DB_CONNECTION_STRING_HERE"
+    "DefaultConnection": "Server=LAPTOP-DA08ERN6;Database=DB_CoralBleachingExtrapolation;Trusted_Connection=Yes;TrustServerCertificate=True"
+    //"DefaultConnection": "ADD_YOUR_DB_CONNECTION_STRING_HERE"
   }
 }
